--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,4 @@
-# Используем дистрибутив Ubuntu 16.04,
-# т.к. в образе предустановлен clang-format версии 7.
 dist: xenial
 language: cpp
-compiler:
-	- clang
-	- gcc
 script:
-  - git ls-files src/ | xargs clang-format -i && git diff --exit-code
+  - make
